--- a/memory-game/game.html
+++ b/memory-game/game.html
@@ -1,16 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/memory.css">
-    <title></title>
-</head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/memory.css" />
+    <script src="./scripts/memory.js"></script>
+    <title>Memory Game</title>
+    </head>
 
 <body>
-
-</body>
-
+    <header>
+        <h3>Choose the common cards to win</h3>
+    </header>
+    <div class="game">
+        <div class="card">
+            <img src="../assets/1.png" alt="" class="card__face front" />
+            <div class="back" class="card__face back"></div>
+        </div>
+        <div class="card">
+            <img src="../assets/2.png" alt="" class="card__face front" />
+            <div class="back" class="card__face back"></div>
+        </div>
+        <div class="card">
+            <img src="../assets/1.png" alt="" class="card__face front" />
+            <div class="back" class="card__face back"></div>
+        </div>
+        <div class="card">
+            <img src="../assets/2.png" alt="" class="card__face front" />
+            <div class="back" class="card__face back"></div>
+        </div>
+        <div class="card">
+            <img src="../assets/3.png" alt="" class="card__face front" />
+            <div class="back" class="card__face back"></div>
+        </div>
+        <div class="card">
+            <img src="../assets/4.png" alt="" class="card__face front" />
+            <div class="back" class="card__face back"></div>
+        </div>
+        <div class="card">
+            <img src="../assets/3.png" alt="" class="card__face front" />
+            <div class="back" class="card__face back"></div>
+        </div>
+        <div class="card">
+            <img src="../assets/4.png" alt="" class="card__face front" />
+            <div class="back" class="card__face back"></div>
+        </div>
+        <div class="card">
+            <img src="../assets/5.png" alt="" class="card__face front" />
+            <div class="back" class="card__face back"></div>
+        </div>
+        <div class="card">
+            <img src="../assets/6.png" alt="" class="card__face front" />
+            <div class="back" class="card__face back"></div>
+        </div>
+        <div class="card">
+            <img src="../assets/5.png" alt="" class="card__face front" />
+            <div class="back" class="card__face back"></div>
+        </div>
+        <div class="card">
+            <img src="../assets/6.png" alt="" class="card__face front" />
+            <div class="back" class="card__face back"></div>
+        </div>
+    </div>
+    </body>
 </html>
