--- a/memory-game/game.html
+++ b/memory-game/game.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/memory.css" />
-    <script src="./scripts/memory.js"></script>
+    <script src="./scripts/memory.js" defer></script>
     <title>Memory Game</title>
     </head>
 
