Bug fix and improvements

--- a/tic-tac-toe/game.html
+++ b/tic-tac-toe/game.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h3>Player <span id="playerTurn">X</span> turn:</h3>
+        <h3 id="playerTurn">Player X turn:</h3>
     </header>
     <div class="game">
         <div class="line first"></div>
