Added restart button and style

--- a/tic-tac-toe/game.html
+++ b/tic-tac-toe/game.html
@@ -38,6 +38,7 @@
         </div>
         <div class="line second"></div>
     </div>
+    <button class="restart">Restart</button>
 </body>
 
 </html>
