Updated tic tac toe game preview

--- a/memory-game/game.html
+++ b/memory-game/game.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,9 +8,10 @@
     <link rel="stylesheet" href="./styles/memory.css" />
     <script src="./scripts/memory.js" defer></script>
     <title>Memory Game</title>
-    </head>
+</head>
 
 <body>
+    <a href="../index.html" class="home">Home</a>
     <header>
         <h3>Choose the common cards to win</h3>
     </header>
@@ -63,5 +65,6 @@
             <div class="back" class="card__face back"></div>
         </div>
     </div>
-    </body>
+</body>
+
 </html>
