--- a/tic-tac-toe/game.html
+++ b/tic-tac-toe/game.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <a href="../index.html" class="home">Home</a>
     <header>
         <h3 id="playerTurn">Player X turn:</h3>
     </header>
