--- a/tic-tac-toe/game.html
+++ b/tic-tac-toe/game.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/tictac.css" />
     <script src="./scripts/tictac.js" defer></script>
-    <title>Memory Game</title>
+    <title>TicTacToe</title>
 </head>
 
 <body>
