Added score element and styling

--- a/memory-game/game.html
+++ b/memory-game/game.html
@@ -65,6 +65,7 @@
             <div class="back" class="card__face back"></div>
         </div>
     </div>
+    <h3 class="score">Score: <span id="score">0</span></h3>
 </body>
 
 </html>
