Added scoring system element and styling

--- a/tic-tac-toe/game.html
+++ b/tic-tac-toe/game.html
@@ -39,6 +39,8 @@
         </div>
         <div class="line second"></div>
     </div>
+    <h3 class="score">Player X score: <span id="scoreX">0</span></h3>
+    <h3 class="score">Player O score: <span id="scoreO">0</span></h3>
     <button class="restart">Restart</button>
 </body>
 
